# inference-digital-twin

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  design-preview.html  desktop_main.spec  dev.bat  launch.bat  pyproject.toml  run.py
.claude/: launch.json
app/: artifacts.py  config.py  db.py  errors.py  hashing.py  main.py  orchestrator.py  run_queue.py  services.py  validation.py
app/api/: routes.py
app/modules/: __init__.py  common.py  energy.py  hardware.py  interconnect.py  orchestration.py  runtime.py
app/static/: app.css  artifacts_list.js  common.js  control-room.css  control-room.js  dashboard.css  dashboard.js  explorer.css  explorer.js  forge-3d.js  forge-state.js  forge-zoom.js  forge.css  forge.js  global-nav.css  intro.css  intro.js  provenance.js  run_detail.js  runs_list.js  world_paths.json
app/templates/: artifacts_list.html  base.html  control-room.html  dashboard.html  explorer.html  forge.html  provenance.html  (+2 more)
artifacts/: coefficients.v1.json
desktop/: app_manager.py  desktop_main.py  server_thread.py
docs/: AGENT_HANDOFF.md  Forge Data Center Open source project.md  MIGRATION.md  PLAN.md  TEST_PLAN.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
tests/: conftest.py  test_contracts.py  test_desktop_intro.py  test_forge_frontend_regressions.py  test_hashing.py  test_integration.py  test_modules.py  test_run_py_launcher.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+52 files in other folders)
