[project]
name = "inference-digital-twin"
version = "0.1.1"
description = "Inference Digital Twin research platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "jinja2>=3.1.5",
  "jsonschema>=4.25.0",
  "pydantic>=2.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]
desktop = [
  "PyQt6>=6.9.0",
  "PyQt6-WebEngine>=6.9.0",
  "pyinstaller>=6.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "desktop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
